tweaks for new oca

--- a/layouts/partials/contact.html
+++ b/layouts/partials/contact.html
@@ -11,17 +11,9 @@
 				</div>
 			</div>
 			<div class="row row-bottom-padded-md">
-				<div class="col-md-6 to-animate">
-					<h3>{{ with .Site.Params.contact.info }}{{ . | markdownify }}{{ end }}</h3>
-					<ul class="fh5co-contact-info">
-					{{ range .Site.Params.contact.details }}
-						<li class="fh5co-contact-address "><i class="{{ with index . 0}}{{ . }}{{ end }}"></i>{{ with index . 1}}{{ . | markdownify }}{{ end }}</li>
-					{{ end }}
-					</ul>
-				</div>
 				{{ if .Site.Params.contact.form }}
-				<div class="col-md-6 to-animate">
-					<form method="post" action="//formspree.io/{{ with .Site.Params.email }}{{.}}{{ end }}">
+				<div class="to-animate">
+					<form class="contact" method="post" action="//formspree.io/{{ with .Site.Params.email }}{{.}}{{ end }}">
 					<div class="form-group ">
 						{{ with .Site.Params.contact.name }}
 						<label for="name" class="sr-only">{{ . | markdownify }}</label>
@@ -54,7 +46,4 @@
 				{{ end }}
 			</div>
 		</div>
-		{{ if .Site.Params.contact.map }}
-        	<div id="map" class="to-animate"></div>
-		{{ end }}
 	</section>
