--- a/layouts/index.html
+++ b/layouts/index.html
@@ -5,7 +5,7 @@
 <!--[if gt IE 8]>      <html class="no-js"> <![endif]-->
 <html>
     <head>
-        {{ partial "head.html" .}}
+		{{ partial "head.html" .}}
     </head>
     <body>
         {{ partial "nav.html" .}}
@@ -14,7 +14,7 @@
 		
         {{ partial "intro.html" .}}
 
-		{{ if .Site.Params.work.enable }}
+		{{ if .Site.Params.projects.enable }}
        		{{ partial "work.html" .}}
        	{{ end }}
 
@@ -36,11 +36,11 @@
 
 		{{ if .Site.Params.contact.enable }}
         	{{ partial "contact.html" .}}
-        {{ end }}
+		{{ end }}
 
         {{ if .Site.Params.footer.enable }}
         	{{ partial "footer.html" .}}
-        {{ end }}
+		{{ end }}
 
         {{ partial "js.html" .}}
     </body>
