--- a/layouts/partials/about.html
+++ b/layouts/partials/about.html
@@ -16,13 +16,10 @@
 					<div class="fh5co-person text-center to-animate">
 						<figure><img src="images/{{ .img }}" alt="{{ .alt }}"></figure>
 						<h3>{{ .name | markdownify }}</h3>
-						<span class="fh5co-position">{{ .position | markdownify }}</span>
 						<p>{{ .description | markdownify }}</p>
-						<ul class="social social-circle">
-						{{ range .social }}
-							<li><a href="{{ index . 1 }}"><i class="{{ index .  0 }}"></i></a></li>
+						{{ if .button}}
+						<p><a href="{{ .url }}" class="btn btn-primary">{{ .button}}</a></p>
 						{{ end }}
-						</ul>
 					</div>
 				</div>
 			{{ end }}
