--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -1,11 +1,12 @@
-    <header role="banner" id="fh5co-header">
+<header role="banner" id="fh5co-header">
+    {{ partial "oasis-header.html" }}
         <div class="container">
             <!-- <div class="row"> -->
             <nav class="navbar navbar-default">
-                <div class="navbar-header">
+                <div class="navbar-header">                    
                     <!-- Mobile Toggle Menu Button -->
                     <a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"><i></i></a>
-                    <a class="navbar-brand" href="index.html">{{ with .Site.Params.navigation.brand }}{{ . | markdownify }}{{ end }}</a> 
+                    <a class="navbar-brand" href="{{ .URL }}"><img src="/img/OCA-1.png"></a> 
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                   <ul class="nav navbar-nav navbar-right">
@@ -15,10 +16,6 @@
                     {{ end }}
 
                     <li class="active"><a href="#" data-nav-section="home"><span>{{ with .Site.Params.navigation.home }}{{ . | markdownify }}{{ end }}</span></a></li>
-                    
-                    {{ if .Site.Params.work.enable }}
-                    <li><a href="#" data-nav-section="work"><span>{{ with .Site.Params.navigation.work }}{{ . | markdownify }}{{ end }}</span></a></li> 
-                    {{ end }}
 
                     {{ if .Site.Params.testimonials.enable }}
                     <li><a href="#" data-nav-section="testimonials"><span>{{ with .Site.Params.navigation.testimonials }}{{ . | markdownify }}{{ end }}</span></a></li> 
@@ -26,6 +23,10 @@
 
                     {{ if .Site.Params.services.enable }}
                     <li><a href="#" data-nav-section="services"><span>{{ with .Site.Params.navigation.services }}{{ . | markdownify }}{{ end }}</span></a></li> 
+                    {{ end }}
+
+                    {{ if .Site.Params.projects.enable }}
+                    <li><a href="#" data-nav-section="projects"><span>{{ with .Site.Params.navigation.projects }}{{ . | markdownify }}{{ end }}</span></a></li> 
                     {{ end }}
 
                     {{ if .Site.Params.about.enable }}
@@ -37,7 +38,7 @@
                     {{ end }}
 
                     {{ range .Site.Menus.postpend }}
-                        <li><a class="external" href="{{ .URL }}"><span>{{ .Name | markdownify }}</span></a></li>
+                    <li><a class="external" href="{{ .URL }}"><span>{{ .Name | markdownify }}</span></a></li>
                     {{ end }}
                 </ul>
             </div>
