--- a/layouts/partials/work.html
+++ b/layouts/partials/work.html
@@ -13,7 +13,7 @@
 			<div class="row row-bottom-padded-sm">
 			{{ range .Site.Params.projects.row }}
 				<div class="col-md-4 col-sm-6 col-xxs-12">
-					<a href="{{ .url }}" class="fh5co-project-item image-popup to-animate">
+					<a href="{{ .url }}" class="fh5co-project-item to-animate">
 						<img src="img/{{ .img }}" alt="{{ .alt }}" class="img-responsive">
 						<div class="fh5co-text">
 						<h2>{{ .title }}</h2>
