slight edit to partial

--- a/layouts/partials/about.html
+++ b/layouts/partials/about.html
@@ -14,7 +14,7 @@
 			{{ range .Site.Params.about.item }}
 				<div class="col-md-4">
 					<div class="fh5co-person text-center to-animate">
-						<figure><img src="images/{{ .img }}" alt="{{ .alt }}"></figure>
+						<figure><img src="/images/{{ .img }}" alt="{{ .alt }}"></figure>
 						<h3>{{ .name | markdownify }}</h3>
 						<p>{{ .description | markdownify }}</p>
 						{{ if .button}}
